--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.7.4",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-syntax-highlighter": "^16.1.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
